--- a/app/views/admins/signin.html.erb
+++ b/app/views/admins/signin.html.erb
@@ -1,15 +1,9 @@
-<p>Sign In</p>
-<%= form_for (:admin, :url => {:controller => 'admins', :action => 'login'}) do |f| %>
-  <p>
-    <%= f.label 'username or email:' %><br />
-    <%= f.text_field :username %>
-  </p>
-  <p>
-    <%= f.label 'password:' %><br />
-    <%= f.password_field :password %>
-  </p>
-  <p>
-    <%= f.submit 'Sign In' %>&nbsp;&nbsp;&nbsp;
+<h1>Sign In</h1>
+<%= form_for(:admin, :url => {:controller => 'admins', :action => 'login'}) do |f| %>
+    <p> Email:</br> <%= f.text_field :email%> </p>
+    <p> Password:</br> <%= f.password_field :password%></p>
+    <%= f.submit 'Sign In' %>
     <%= f.submit 'Clear Form', :type => 'reset' %>
-  </p>
 <% end %>
+
+
