--- a/app/views/admins/_form.html.erb
+++ b/app/views/admins/_form.html.erb
@@ -3,7 +3,7 @@
     <p> Email:</br> <%= f.text_field :email%> </p>
     <p> Password:</br> <%= f.password_field :password%></p>
     <p> Password Confirmation:</br> <%= f.password_field :password_confirmation%> </p>
-    <%= f.submit :Signup %>
+    <%= f.submit %>
   <% end %>
 
   <% if @admin.errors.any? %>
