--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,12 +14,22 @@
 		<div id="logo">MIS</div>
 		
 		<div id="user_nav">
+			<%= link_to "Home", root_path %>
 		  <% if current_user %>
-		    Logged in as <%= current_user.email %>.
-		    <%= link_to "Log out", log_out_path %>
+		  	<div id="useractions">
+			    Logged in as <%= current_user.email %>.
+			    <%= link_to "Log out", log_out_path %>
+			    <%= link_to "View account", admin_path(current_user) %>
+			    <%= link_to "Update account", edit_admin_path(current_user) %>
+			    <%= link_to 'Destroy account', admin_path(current_user), method: :delete, data: { confirm: 'Are you sure?' } %>
+		    </div>
+		    <div>
+		    	<%= link_to "Departments" ,departments_path %>
+		    </div>
 		  <% else %>
-		    <%= link_to "Sign up", new_admin_path %> or
-		    <%= link_to "log in", log_in_path %>
+		    <%= link_to "Admin Sign up", new_admin_path %> or
+		    <%= link_to "Admin log in", log_in_path %>
+		    <%= link_to "Forget password ", lostpassword_admins_path %>
 		  <% end %>
 		</div>
 
