--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,6 @@
 		<div id="logo">MIS</div>
 		
 		<div id="user_nav">
-			<%= link_to "Home", root_path %>
 		  <% if current_user %>
 		  	<div id="useractions">
 			    Logged in as <%= current_user.email %>.
@@ -22,9 +21,6 @@
 			    <%= link_to "View account", admin_path(current_user) %>
 			    <%= link_to "Update account", edit_admin_path(current_user) %>
 			    <%= link_to 'Destroy account', admin_path(current_user), method: :delete, data: { confirm: 'Are you sure?' } %>
-		    </div>
-		    <div>
-		    	<%= link_to "Departments" ,departments_path %>
 		    </div>
 		  <% else %>
 		    <%= link_to "Admin Sign up", new_admin_path %> or
@@ -39,9 +35,8 @@
 
 		<div id="mainmenu">
 			<ul id="yw0">
-				<li class="active">
-					
-				</li>
+				<li><%= link_to "Home", root_path %></li>
+				<li><%= link_to "Departments" ,departments_path %></li>
 			</ul>
 		</div>
 
