department select all and search

--- a/app/views/departments/index.html.erb
+++ b/app/views/departments/index.html.erb
@@ -2,6 +2,7 @@
 	<table>
 		<tr>
 			<td><%= link_to "Add department", new_department_path %></td>
+			<td><%= link_to "Search department", search_departments_path %></td>
 		</tr>
 	</table>
 </div>
