designation management day 5

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,8 +37,9 @@
 
 		<div id="mainmenu">
 			<ul id="yw0">
-				<li><%= link_to "Home", root_path %></li>
-				<li><%= link_to "Departments" ,departments_path %></li>
+			  <li><%= link_to "Home", root_path %></li>
+			  <li><%= link_to "Departments" ,departments_path %></li>
+			  <li><%= link_to "Designations" ,designation_index_path %></li>
 			</ul>
 		</div>
 
