--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,32 +14,29 @@
 		<div id="logo">MIS</div>
 		
 		<div id="user_nav">
-		  <% if current_user %>
-		  	<div id="useractions">
+			<% if current_user %>
 			    Logged in as <%= current_user.email %>.
 			    <%= link_to "Log out", log_out_path %>
 			    <%= link_to "View account", admin_path(current_user) %>
 			    <%= link_to "Update account", edit_admin_path(current_user) %>
 			    <%= link_to "Update password", changepassword_admins_path %>
-			    
 			    <%= link_to 'Destroy account', admin_path(current_user), method: :delete, data: { confirm: 'Are you sure?' } %>
-		    </div>
-		  <% else %>
-		    <%= link_to "Admin Sign up", new_admin_path %> or
-		    <%= link_to "Admin log in", log_in_path %>
-		    <%= link_to "Forget password ", lostpassword_admins_path %>
-		  <% end %>
+			<% else %>
+				<%= link_to "Admin Sign up", new_admin_path %> or
+				<%= link_to "Admin log in", log_in_path %>
+				<%= link_to "Forget password ", lostpassword_admins_path %>
+			<% end %>
+		  	<% flash.each do |name, msg| %>
+		  		<%= content_tag :div, msg, :id => "flash_#{name}", :class => "flash-notice" %>
+			<% end %>
 		</div>
-
-		<% flash.each do |name, msg| %>
-		  <%= content_tag :div, msg, :id => "flash_#{name}" %>
-		<% end %>
 
 		<div id="mainmenu">
 			<ul id="yw0">
 			  <li><%= link_to "Home", root_path %></li>
 			  <li><%= link_to "Departments" ,departments_path %></li>
 			  <li><%= link_to "Designations" ,designation_index_path %></li>
+			  <li><%= link_to "Locations" ,locations_path %></li>
 			</ul>
 		</div>
 
