--- a/app/views/departments/search_results.html.erb
+++ b/app/views/departments/search_results.html.erb
@@ -2,11 +2,14 @@
 	<input type="checkbox" name="sample" class="selectall"/> Select all</label>
   	<table>
 	    <tr>
-	      <th>Check box</th>
-	      <th>Id</th>
-	      <th>Name</th>
-	      <th>Status</th>
-	      <th colspan="4"></th>
+			<th>
+				<%= check_box_tag(:selectall_departments) %>
+				<%= label_tag(:selectall_departments, "Select All") %>
+			</th>
+			<th>Id</th>
+			<th>Name</th>
+			<th>Status</th>
+			<th colspan="4"></th>
 	    </tr>
 
     	<% @departments.each do |department| %>
