--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,8 @@
 			  <li><%= link_to "Designations" ,designation_index_path %></li>
 			  <li><%= link_to "Locations" ,locations_path %></li>
 			  <li><%= link_to "Availabilities" ,availabilities_path %></li>
+			  <li><%= link_to "Skills",skills_path%></li>
+			  <li><%= link_to "Members",members_path%></li>
 			</ul>
 		</div>
 
