--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -603,3 +603,4 @@ div.wide.form .buttons, div.wide.form .hint, div.wide.form .errorMessage
 }
 #useractions{padding:10px}
 .half_width{ width:50%;float:left;}
+#designation_V{display:none;}
