member management and leave type

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,6 +37,7 @@
 			  <li><%= link_to "Availabilities" ,availabilities_path %></li>
 			  <li><%= link_to "Skills",skills_path%></li>
 			  <li><%= link_to "Members",members_path%></li>
+			  <li><%= link_to "Leave types",leavetypes_path%></li>
 			</ul>
 		</div>
 
