--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,8 @@
 			  <li><%= link_to "Skills",skills_path%></li>
 			  <li><%= link_to "Members",members_path%></li>
 			  <li><%= link_to "Leave types",leavetypes_path%></li>
+			  <li><%= link_to "Leave day types",leavedaytypes_path%></li>
+			  <li><%= link_to "Leave status",leavestatuses_path%></li>
 			</ul>
 		</div>
 
