task 1.12 Leave Management

--- a/app/views/departments/search_results.html.erb
+++ b/app/views/departments/search_results.html.erb
@@ -1,4 +1,4 @@
-<% if @departments.length>0 %>
+<% if @departments && @departments.length>0 %>
 	<input type="checkbox" name="sample" class="selectall"/> Select all</label>
   	<table>
 	    <tr>
