--- a/app/views/designations/_search.html.erb
+++ b/app/views/designations/_search.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag(controller: "designation", action: "search_results") do %>
+<%= form_tag(controller: "designations", action: "search_results") do %>
   <%= label_tag(:name, "Search for designation:") %>
   <%= label_tag(:name, "Name") %>
   <%= text_field_tag(:name) %>
