--- a/app/views/designations/index.html.erb
+++ b/app/views/designations/index.html.erb
@@ -2,7 +2,7 @@
 	<table>
 		<tr>
 			<td><%= link_to "Add designation", new_designation_path %></td>
-			<td><%= link_to "Download:CSV", designation_index_path(format: "csv") %></td>
+			<td><%= link_to "Download:CSV", designations_path(format: "csv") %></td>
 		</tr>
 	</table>
 </div>
