--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
 			<ul id="yw0">
 			  <li><%= link_to "Home", root_path %></li>
 			  <li><%= link_to "Departments" ,departments_path %></li>
-			  <li><%= link_to "Designations" ,designation_index_path %></li>
+			  <li><%= link_to "Designations" ,designations_path %></li>
 			  <li><%= link_to "Locations" ,locations_path %></li>
 			  <li><%= link_to "Availabilities" ,availabilities_path %></li>
 			  <li><%= link_to "Skills",skills_path%></li>
@@ -40,6 +40,7 @@
 			  <li><%= link_to "Leave types",leavetypes_path%></li>
 			  <li><%= link_to "Leave day types",leavedaytypes_path%></li>
 			  <li><%= link_to "Leave status",leavestatuses_path%></li>
+			  <li><%= link_to "Leaves",leaves_path%></li>
 			</ul>
 		</div>
 
