--- a/app/views/leavestatuses/index.html.erb
+++ b/app/views/leavestatuses/index.html.erb
@@ -13,14 +13,14 @@
 			<table>
 				<thead>
 					<tr>
-						<td>
+						<th>
 							<%= check_box_tag(:select_all_LS)%>
 							<%= label_tag(:Select_all,"Select all")%>
-						</td>
-						<td>Id</td>
-						<td>Name</td>
-						<td>Status</td>
-						<td colspan="3">Operations</td>
+						</th>
+						<th>Id</th>
+						<th>Name</th>
+						<th>Status</th>
+						<th colspan="3">Operations</th>
 					</tr>
 				</thead>
 				<tbody>
