--- a/app/views/designations/_form.html.erb
+++ b/app/views/designations/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(:designation, :url => {:controller => 'designation', :action => 'create'}) do |f| %>
+<%= form_for @designation do |f| %>
 	<% if @designation.errors.any? %>
 		<div id="designation_errors">
 			<h2><%= pluralize(@designation.errors.count, "error")%> prohibited this designation from being saved:</h2>
