--- a/app/views/designations/search_results.html.erb
+++ b/app/views/designations/search_results.html.erb
@@ -2,8 +2,8 @@
 	<table>
 		<tr>
 			<td><%= link_to "Add designation", new_designation_path %></td>
-			<td><%= link_to "Download:CSV", designation_index_path(format: "csv") %></td>
-			<td><%= link_to "Back", designation_index_path %></td>
+			<td><%= link_to "Download:CSV", designations_path(format: "csv") %></td>
+			<td><%= link_to "Back", designations_path %></td>
 		</tr>
 	</table>
 </div>
