task ->1.13 project status management

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,6 +41,7 @@
 			  <li><%= link_to "Leave day types",leavedaytypes_path%></li>
 			  <li><%= link_to "Leave status",leavestatuses_path%></li>
 			  <li><%= link_to "Leaves",leaves_path%></li>
+			  <li><%= link_to "Project Status",projectstatuses_path%></li>
 			</ul>
 		</div>
 
