(1.14)Project Type Management,(1.15)Project Mode Management

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,6 +42,8 @@
 			  <li><%= link_to "Leave status",leavestatuses_path%></li>
 			  <li><%= link_to "Leaves",leaves_path%></li>
 			  <li><%= link_to "Project Status",projectstatuses_path%></li>
+			  <li><%= link_to "Project types",projecttypes_path%></li>
+			  <li><%= link_to "Project modes",projectmodes_path%></li>
 			</ul>
 		</div>
 
