--- a/app/views/leaves/_form.html.erb
+++ b/app/views/leaves/_form.html.erb
@@ -39,11 +39,11 @@
 			<div class="half_width">
 				<div class="field">
 					<%= f.label :leave_start_date %><br>
-					<%= f.date_field :leave_start_date%>
+					<%= f.date_select :leave_start_date%>
 				</div>
 				<div class="field">
 					<%= f.label :leave_end_date %><br>
-					<%= f.date_field :leave_end_date%>
+					<%= f.date_select :leave_end_date%>
 				</div>
 				<div class="field">
 					<%= f.label :reason_for_leave %><br>
