task->1.16 project management

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,6 +44,7 @@
 		  <li><%= link_to "Project Status",projectstatuses_path%></li>
 		  <li><%= link_to "Project types",projecttypes_path%></li>
 		  <li><%= link_to "Project modes",projectmodes_path%></li>
+		  <li><%= link_to "Projects",projects_path%></li>
 		</ul>
 	</div>
 
