--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,6 +45,7 @@
 		  <li><%= link_to "Project types",projecttypes_path%></li>
 		  <li><%= link_to "Project modes",projectmodes_path%></li>
 		  <li><%= link_to "Projects",projects_path%></li>
+		  <li><%= link_to "Portfolios",portfolios_path%></li>
 		</ul>
 	</div>
 
